--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,32 +1,32 @@
-.category{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 40px 0;
-    button{
-        border: none !important;
-        background-color: #F4F7FF !important;
-        font-size: 20px;
-        font-weight: 550;
-        cursor: pointer;
-    }
-}
+// .category{
+//     display: flex;
+//     align-items: center;
+//     flex-wrap: wrap;
+//     gap: 10px;
+//     padding: 40px 0;
+//     button{
+//         border: none !important;
+//         background-color: #F4F7FF !important;
+//         font-size: 20px;
+//         font-weight: 550;
+//         cursor: pointer;
+//     }
+// }
 
-@media(max-width:900px){
-    .category{
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 10px;
-        padding: 5px 0;
-        button{
-            border: none !important;
-            background-color: #F4F7FF !important;
-            font-size: 20px;
-            font-weight: 550;
-            cursor: pointer;
-        }
-    }   
-}
+// @media(max-width:900px){
+//     .category{
+//         display: flex;
+//         align-items: center;
+//         flex-wrap: wrap;
+//         justify-content: center;
+//         gap: 10px;
+//         padding: 5px 0;
+//         button{
+//             border: none !important;
+//             background-color: #F4F7FF !important;
+//             font-size: 20px;
+//             font-weight: 550;
+//             cursor: pointer;
+//         }
+//     }   
+// }
