--- a/src/components/Tools/Tools.scss
+++ b/src/components/Tools/Tools.scss
@@ -1,77 +1,77 @@
-#Tools{
-  background-color: #F4F7FF !important;
-  padding: 40px 0;
-}
-.skils{
-  display: grid;
-  gap: 5px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
-  .skils_all{
-  width: 87px;
-  height: 90px;
-  border-radius: 10px;
-  background-color: #A8BFFF;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .img{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    img{
-margin-top: -10px;
-width: 24px;
-height: 24px;
-    }
-    p{
-      margin-top: 10px;
-      font-size: 14px;
-      color: #000000;
-      font-weight: 400;
-      line-height: 18px;
-      text-align: center;
+// #Tools{
+//   background-color: #F4F7FF !important;
+//   padding: 40px 0;
+// }
+// .skils{
+//   display: grid;
+//   gap: 5px;
+//   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+//   .skils_all{
+//   width: 87px;
+//   height: 90px;
+//   border-radius: 10px;
+//   background-color: #A8BFFF;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   .img{
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       flex-direction: column;
+//     img{
+// margin-top: -10px;
+// width: 24px;
+// height: 24px;
+//     }
+//     p{
+//       margin-top: 10px;
+//       font-size: 14px;
+//       color: #000000;
+//       font-weight: 400;
+//       line-height: 18px;
+//       text-align: center;
 
-    }
-  }
-  }
-}
+//     }
+//   }
+//   }
+// }
 
-@media(max-width:900px){
-  .skils{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 5px;
-    .skils_all{
-    width: 87px;
-    height: 90px;
-    border-radius: 10px;
-    background-color: #A8BFFF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .img{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-      img{
-  margin-top: -10px;
-  width: 24px;
-  height: 24px;
-      }
-      p{
-        margin-top: 10px;
-        font-size: 14px;
-        color: #000000;
-        font-weight: 400;
-        line-height: 18px;
-        text-align: center;
+// @media(max-width:900px){
+//   .skils{
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-wrap: wrap;
+//     gap: 5px;
+//     .skils_all{
+//     width: 87px;
+//     height: 90px;
+//     border-radius: 10px;
+//     background-color: #A8BFFF;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     .img{
+//         display: flex;
+//         align-items: center;
+//         justify-content: center;
+//         flex-direction: column;
+//       img{
+//   margin-top: -10px;
+//   width: 24px;
+//   height: 24px;
+//       }
+//       p{
+//         margin-top: 10px;
+//         font-size: 14px;
+//         color: #000000;
+//         font-weight: 400;
+//         line-height: 18px;
+//         text-align: center;
   
-      }
-    }
-    }
-  }
-}
+//       }
+//     }
+//     }
+//   }
+// }
