--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -13,7 +13,7 @@
             font-size: 40px;
             font-weight: 800;
             line-height: 54px;
-            color:#afa7e4;
+            color:#636073;
             margin-top: 20px;
             max-width: 700px;
             width: 100%;
@@ -28,7 +28,7 @@
             font-size: 20px;
             font-weight: 800;
             color: #FFFFFF;
-            margin-top: 15%;
+            margin-top: 10%;
             transition: all .15s linear;
             &:hover{
                 background-color: #1B5BF7;
