--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,6 +6,7 @@ header {
   z-index: 1000;
   background-color: white;
   border-bottom: 1px solid rgb(223, 223, 223);
+  transition: all .20s linear;
   
   nav {
     display: flex;
@@ -18,6 +19,7 @@ header {
       height: 100px;
       border-radius: 50%;
       object-fit: contain;
+      cursor: pointer;
     }
     .ul_list {
       display: flex;
@@ -350,6 +352,9 @@ header {
           position: relative;
           margin: 0 10px;
           list-style: none;
+          .li{
+            display: none;
+          }
           a{
             font-size: 25px;
             font-weight: 550;
@@ -361,6 +366,9 @@ header {
             gap: 5px;
             .p {
               display: flex;
+              p{
+
+              }
               svg {
                 margin-top: 2px;
                 color: black;
@@ -379,7 +387,8 @@ header {
             text-align: center;
             cursor: pointer;
             transition: all 0.1s linear;
-            width: 200px !important;
+            width: 300px !important;
+            margin-top: 30%;
           }
         }
         a:hover {
