--- a/src/components/HowWeWork/HowWeWork.scss
+++ b/src/components/HowWeWork/HowWeWork.scss
@@ -2,16 +2,15 @@
     padding: 20px 0;
     .HowWeWork_all{
         display: flex;
-        // flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
-        padding: 0 20px;
+        gap: 20px;
+        margin-top: 20px;
         .HowWeWork_row{
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 0 20px;
             flex-direction: column;
             .img{
              img{
@@ -21,9 +20,77 @@
              }
             }
             .img_All{
-                text-decoration: line-through;
+                text-decoration:dashed;
+            }
+            h4{
+                font-size: 18px;
+                line-height: 28px;
+                font-weight: 700;
+                margin: 0;
+                color: #000000;
+                margin-top: 10px;
+            }
+            p{
+                width: 362px;
+                width: 100%;
+                height: 52px;
+                font-size: 16px;
+                line-height: 26px;
+                font-weight: 400;
+                 text-align: center;
+               
             }
         }
         
     }
+}
+
+@media(max-width:900px){
+    #HowWeWork{
+        padding: 20px 0;
+        .HowWeWork_all{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+            .HowWeWork_row{
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                .img{
+                 img{
+                    width: 81px;
+                    height: 80px;
+                    object-fit: cover; 
+                 }
+                }
+                .img_All{
+                    text-decoration:dashed;
+                }
+                h4{
+                    font-size: 18px;
+                    line-height: 28px;
+                    font-weight: 700;
+                    margin: 0;
+                    color: #000000;
+                    margin-top: 10px;
+                }
+                p{
+                    width: 362px;
+                    width: 100%;
+                    height: 52px;
+                    font-size: 16px;
+                    line-height: 26px;
+                    font-weight: 400;
+                     text-align: center;
+                   
+                }
+            }
+            
+        }
+    } 
 }
