--- a/src/components/Optimization/Optimization.scss
+++ b/src/components/Optimization/Optimization.scss
@@ -213,6 +213,7 @@
                 height: 117px;
                 background-color: #E0E8FF;
                 border-radius: 10px;
+                margin-left: 10%;
         
                 .img{
                     padding: 0px 20px;
