--- a/src/components/ITconsulting/ITconsulting.scss
+++ b/src/components/ITconsulting/ITconsulting.scss
@@ -64,6 +64,65 @@
     }
 }
 
+@media(max-width:400px){
+    .ITconsulting_row{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        padding: 10px 0px;
+        flex-wrap: wrap;
+        .ITconsulting_all{
+            h1{
+                font-size: 24px;
+                font-weight: 400;
+                color: #313131;
+                max-width: 400px;
+                width: 100%;
+                line-height: 32px;
+    
+            }
+            .glo{
+                display: grid;
+                grid-template-columns: 1fr 1fr !important;
+                gap: 10px;
+                padding: 20px 0;
+                margin-top: 10px;
+                width: 200px 
+                !important;
+                .glo{
+                    max-width: 150px;
+                    width: 100%;
+                    height: 117px;
+                    background-color: #F4F7FF;
+                    border-radius: 10px;
+            
+                    .img{
+                        padding: 0px 20px;
+                        img{
+                            width: 56px;
+                            height: 56px;
+                        }
+                        P{
+                            margin-top: -2px;
+                            font-size: 18px;
+                            font-weight: 500;
+                            text-wrap: nowrap;
+                        }
+                    }
+                }
+            }
+            img{
+                width: 300px;
+                height: 300px;
+                // width: 100%;
+                object-fit: contain;
+            }
+        }
+    }
+}
+
+
 @media(max-width:360px){
     .ITconsulting_row{
         display: flex;
